# swagger-output.json
@@ -9,8 +9,8 @@
   "basePath": "/api",
   "tags": [
     {
-      "name": "필수 기능",
-      "description": "기본으로 구현해야 하는 기능"
+      "name": "Todo List",
+      "description": "할일 목록 관리"
     },
     {
       "name": "부가 기능",
@@ -24,10 +24,10 @@
     "/todolist": {
       "get": {
         "tags": [
-          "필수 기능"
+          "Todo List"
         ],
         "summary": "할일 목록 조회",
-        "description": "할일 목록을 조회합니다.<br>page, limit 파라미터는 선택사항이며 전달하지 않으면 전체 할일 목록을 조회합니다.<br>page만 전달할 경우 limit 값은 기본 10으로 지정됩니다.",
+        "description": "할일 목록을 조회합니다.<br>page, limit 파라미터는 선택사항이며 page를 전달하지 않으면 전체 할일 목록을 조회합니다.<br>page만 전달할 경우 limit 값은 기본 10으로 지정됩니다.",
         "parameters": [
           {
             "name": "page",
@@ -61,7 +61,7 @@
       },
       "post": {
         "tags": [
-          "필수 기능"
+          "Todo List"
         ],
         "summary": "할일 등록",
         "description": "할일을 등록합니다.<br>title, content를 전달하면 할일을 등록한 후 등록된 할일을 반환합니다.",
@@ -101,7 +101,7 @@
     "/todolist/{_id}": {
       "get": {
         "tags": [
-          "필수 기능"
+          "Todo List"
         ],
         "summary": "할일 상세 조회",
         "description": "할일 상세 정보를 조회합니다.",
@@ -136,7 +136,7 @@
       },
       "patch": {
         "tags": [
-          "필수 기능"
+          "Todo List"
         ],
         "summary": "할일 수정",
         "description": "할일을 수정합니다. 할일을 수정한 후 수정된 할일을 반환합니다.<br>바디로 전달한 속성에 대해서만 수정되고 전달하지 않은 속성은 유지됩니다.",
@@ -180,7 +180,7 @@
       },
       "delete": {
         "tags": [
-          "필수 기능"
+          "Todo List"
         ],
         "summary": "할일 삭제",
         "description": "할일을 삭제합니다.",
@@ -281,7 +281,7 @@
           "properties": {
             "message": {
               "type": "string",
-              "example": "/api/todolist/485734 리소스를 찾을 수 없습니다."
+              "example": "/api/todolist/{_id} 리소스를 찾을 수 없습니다."
             }
           }
         }
@@ -310,11 +310,11 @@
       "properties": {
         "title": {
           "type": "string",
-          "example": "JS 프로젝트 완성"
+          "example": "TodoList 프로젝투 완성"
         },
         "content": {
           "type": "string",
-          "example": "화요일까지 완료해야 함."
+          "example": "이번주에 진핼항 수업 내용"
         }
       }
     },
@@ -323,11 +323,11 @@
       "properties": {
         "title": {
           "type": "string",
-          "example": "JS 프로젝트 완성"
+          "example": "TodoList 프로젝트 완성"
         },
         "content": {
           "type": "string",
-          "example": "화요일까지 완료해야 함."
+          "example": "이번주에 진행할 수업 내용"
         },
         "done": {
           "type": "boolean",
@@ -351,19 +351,23 @@
             },
             "title": {
               "type": "string",
-              "example": "JS 프로젝트 완성"
+              "example": "Javascript 공부"
             },
             "content": {
               "type": "string",
-              "example": "화요일까지 완료해야 함."
+              "example": "열심히 하자"
+            },
+            "done": {
+              "type": "boolean",
+              "example": false
             },
             "createdAt": {
               "type": "string",
-              "example": "2023.10.30 11:34:31"
+              "example": "2024.02.16 16:12:18"
             },
             "updatedAt": {
               "type": "string",
-              "example": "2023.10.30 11:34:31"
+              "example": "2024.02.16 16:12:18"
             }
           }
         }
@@ -387,7 +391,7 @@
               },
               "title": {
                 "type": "string",
-                "example": "React 공부"
+                "example": "Promise 복습"
               },
               "done": {
                 "type": "boolean",
@@ -395,11 +399,11 @@
               },
               "createdAt": {
                 "type": "string",
-                "example": "2023.10.25 10:12:45"
+                "example": "2024.02.14 17:12:18"
               },
               "updatedAt": {
                 "type": "string",
-                "example": "2023.10.25 18:34:17"
+                "example": "2024.02.14 21:12:18"
               }
             }
           }
@@ -445,7 +449,7 @@
               },
               "title": {
                 "type": "string",
-                "example": "React 공부"
+                "example": "Promise 복습"
               },
               "done": {
                 "type": "boolean",
@@ -453,11 +457,11 @@
               },
               "createdAt": {
                 "type": "string",
-                "example": "2023.10.25 10:12:45"
+                "example": "2024.02.14 17:12:18"
               },
               "updatedAt": {
                 "type": "string",
-                "example": "2023.10.25 18:34:17"
+                "example": "2024.02.14 21:12:18"
               }
             }
           }
